--- a/work-then-travel-web/src/index.css
+++ b/work-then-travel-web/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://befonts.com/tt-hazelnuts-font-family.html");
 @import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@400;700&display=swap');
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
